# Dow-Stock

./: .gitignore  .prettierignore  README.md  next.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json  vite.config.ts
.github/workflows/: test-backend.yaml
app/: main.py  stocks.py
app/test/: test_main.py
backend/app/: main.py
backend/notebooks/: Stock Data.ipynb
backend/scripts/: run.sh
frontend/src/: App.tsx
notebooks/: Stock Data.ipynb
requirements/: base.txt  dev.txt  production.txt
scripts/: test.sh
src/chart/: options.ts
src/components/: Header.tsx  Loading.tsx
src/config/: index.ts
src/pages/: _app.tsx  index.tsx
src/styles/: globals.css
src/utils/: data.ts  dates.ts
