[tool.poetry]
name = "stocks-fastapi"
version = "0.1.0"
description = ""
authors = ["Arvind-4 <lordarvindthegamer@gmail.com>"]
readme = "README.md"
packages = [{include = "stocks_fastapi"}]

[tool.poetry.dependencies]
python = "^3.9"
yfinance = "^0.2.18"
fastapi = "^0.95.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
uvicorn = "^0.22.0"
black = {extras = ["jupyter"], version = "^23.3.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
